# dummy_mongodb_imdb_movies

./: .coveragerc  .flake8  .gitignore  .pylintrc  LICENCE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: application_dummy_movies.json  application_settings.py  main.py  models.py  mongodb_engine.py  utils.py
app/db_dump/dump/movies_db/: movies.bson  movies.metadata.json
tests/: test_main.py  test_utils.py
