[tool.poetry]
name = "dummy-mongodb-imdb-movies"
version = "0.1.0"
description = "This dummy app involves web scraping and using MongoDB with Python. The aim is to create a personal movie database with illustration pictures for each movie, which can then be used in other projects."
authors = ["memphis-tools <rn@github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = ">=2.6.1"
aiohttp = ">=3.10.11"
aioresponses = ">=0.7.8"
aiosignal = ">=1.4.0"
asyncio = ">=4.0.0"
attrs = "25.4.0"
beautifulsoup4 = ">=4.12.3"
bs4 = "0.0.2"
certifi = ">=2025.11.12"
charset-normalizer = ">=3.4.4"
coverage = ">=7.12.0"
dnspython = ">=2.8.0"
docker = "7.1.0"
frozenlist = "1.8.0"
idna = "3.11"
iniconfig = ">=2.3.0"
markdown-it-py = ">=4.0.0"
mdurl = "0.1.2"
multidict = ">=6.7.0"
packaging = ">=25.0"
pluggy = ">=1.6.0"
pygments = ">=2.19.2"
pymongo = ">=4.15.5"
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
requests = ">=2.32.5"
rich = ">=14.2.0"
soupsieve = "2.5"
urllib3 = ">=2.6.0"
yarl = ">=1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
